crates/solidity/testing/snapshots/bindings_output/contracts/inheritance_arguments_with_inner_constant/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:2:16]
   │
 2 │     constructor(uint) {}
   │                ─────┬────  
   │                     ╰────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Base" @ input.sol:1:10] (contract)
- Def: #2 ["Derived" @ input.sol:5:10] (contract)
- Def: #3 ["OTHER" @ input.sol:6:19] (constant, type: uint256)

------------------------------------------------------------------------

References (2):
- Ref: ["Base" @ input.sol:5:21] -> #1
- Ref: ["OTHER" @ input.sol:5:26] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["constructor" @ input.sol:2:5]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     constructor(uint) {}
   │     ─────┬─────  
   │          ╰─────── ???
   │ 
 5 │ contract Derived is Base(OTHER) { // the initializer expression should NOT bind
   │          ───┬───    ──┬─ ──┬──  
   │             ╰─────────────────── name: 2
   │                       │    │    
   │                       ╰───────── ref: 1
   │                            │    
   │                            ╰──── unresolved
 6 │     uint constant OTHER = 33;
   │                   ──┬──  
   │                     ╰──── name: 3
───╯
